# computer_vision

./: .gitiginore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml  cmake-multi-platform.yml
week_1/: CMakeLists.txt  color_img.cpp  display_fonctions.cpp  image_matrix.cpp  manipuling_pixels.cpp  save_image.cpp
